# zee

./: dune-project
_build/: .db  .digest-db  log
_build/default/: zee.dune-package  zee.install  zee.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: zee.cma  zee.cmxa  zee.cmxs  zee.ml-gen
_build/default/lib/.merlin-conf/: lib-zee
_build/default/lib/.zee.objs/: zee__Subcommmands.impl.d
_build/default/lib/.zee.objs/byte/: zee.cmi  zee.cmo  zee.cmt  zee__Subcommmands.cmi  zee__Subcommmands.cmo  zee__Subcommmands.cmt
_build/default/lib/.zee.objs/native/: zee.cmx  zee__Subcommmands.cmx
_build/default/test/.merlin-conf/: exe-test_zee
_build/default/test/.test_zee.eobjs/byte/: dune__exe__Test_zee.cmi  dune__exe__Test_zee.cmti
_build/default/test/.test_zee.eobjs/native/: dune__exe__Test_zee.cmx
_build/install/default/lib/zee/: META  dune-package  opam
lib/: dune
test/: dune
