(lang dune 3.17)

(name zee)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Adegbite Adeadura adeaduratimilehin@gmail.com")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name zee)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml cmdliner)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
